external-crates/move/crates/move-compiler/tests/move_2024/parser/positional_struct_explicit_type_arg_assign.exp
error[E03003]: unbound module member
  ┌─ tests/move_2024/parser/positional_struct_explicit_type_arg_assign.move:6:9
  │
6 │         Foo <u64>(_) = Foo(0);
  │         ^^^ Invalid module access. Unbound constant 'Foo' in module '0x42::M'

error[E04003]: built-in operation not supported
  ┌─ tests/move_2024/parser/positional_struct_explicit_type_arg_assign.move:6:9
  │
6 │         Foo <u64>(_) = Foo(0);
  │         ^^^^^^^^
  │         │
  │         Invalid argument to '>'
  │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E03009]: unbound variable
  ┌─ tests/move_2024/parser/positional_struct_explicit_type_arg_assign.move:6:14
  │
6 │         Foo <u64>(_) = Foo(0);
  │              ^^^ Unbound variable 'u64'

error[E03009]: unbound variable
  ┌─ tests/move_2024/parser/positional_struct_explicit_type_arg_assign.move:6:18
  │
6 │         Foo <u64>(_) = Foo(0);
  │                  ^^^ Unbound variable '_'

error[E04003]: built-in operation not supported
  ┌─ tests/move_2024/parser/positional_struct_explicit_type_arg_assign.move:6:18
  │
6 │         Foo <u64>(_) = Foo(0);
  │         -------- ^^^ Invalid argument to '>'
  │         │         
  │         Found: 'bool'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/positional_struct_explicit_type_arg_assign.move:6:22
  │
6 │         Foo <u64>(_) = Foo(0);
  │                      ^
  │                      │
  │                      Unexpected '='
  │                      Expected ';'

